Finalize AutoValues Impl